fixed weird scrollbar disappearing bug

--- a/src/app.css
+++ b/src/app.css
@@ -41,9 +41,6 @@
 	}
 	body {
 		@apply bg-background text-foreground;
-		margin: 0;
-		height: 100%;
-		overflow: hidden;
 	}
 }
 
